fixed footer on mobile

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ nav a:hover, nav a:focus{
     text-align: center;
     background-color: #ff0c00;
     color: white;
-    width: 58%;
+    width: 44%;
     padding: 4px 8px; 
 }
 
@@ -113,7 +113,7 @@ nav a:hover, nav a:focus{
     text-align: center;
     background-color: #ff0c00;
     color: white;
-    width: 58%;
+    width: 44%;
     padding: 4px 8px; 
 }
 .LocalWireText{
@@ -123,7 +123,7 @@ nav a:hover, nav a:focus{
     text-align: center;
     background-color: #ff0c00;
     color: white;
-    width: 58%;
+    width: 44%;
     padding: 4px 8px;
 }
 
@@ -149,8 +149,8 @@ nav a:hover, nav a:focus{
     
 
 footer{
-    position: absolute;
-    bottom: -76px;
+    position: relative;
+    top: 229px;
     background-color:#666666;
     color: white;
     width: 100%;
